# report-france-hvac

./: .envrc  .gitignore  README.md  cohorts.ipynb  cohorts_agency.ipynb  cohorts_agency_process.ipynb  cohorts_eda.ipynb  cohorts_product.ipynb  cohorts_report.ipynb  cohorts_year.ipynb  data_cleaning.ipynb  pyproject.toml  quote_pipeline.ipynb
backlog/: quote_pipeline.py
cohorts/: README.md  agency.py  cohort_curves.py  cohort_performance.py  cohorts.ipynb  cohorts.py  process.py  product.py  year.py
util/: cohort.py  plot.py  quarter.py
