[tool.poetry]
name = "report-france-hvac"
version = "0.1.0"
description = ""
authors = ["Slovikovskaya <vslovik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
pdfplumber = "^0.11.6"
polars = "^1.35.2"
pytest = "^9.0.1"
duckdb = "^1.4.3"
jupyterlab = "^4.5.2"
ipykernel = "^7.1.0"
plotly = "^6.5.2"
notebook-as-pdf = "^0.5.0"
chardet = "^7.2.0"
scipy = "^1.17.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"